--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -12,8 +11,8 @@
     </header>
 
     <section class="hero">
-        <h1>Welcome to Blessed Music Business</h1>
-        <p>Management, producción y distribución de artistas con visión.</p>
+        <h1>Bienvenido a Blessed Music Business</h1>
+        <p>Gestión, producción y distribución de artistas con visión.</p>
     </section>
 
     <section class="artists">
